<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetunjukActivity"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp">

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_outline_signal_cellular_alt_24"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk0"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk0"
        android:layout_marginTop="16dp">

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_download_24"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk1"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk1"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/dashboard_petunjuk"
            android:gravity="center_vertical|fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk2"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk2"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/video_petunjuk"
            android:gravity="center_vertical|fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk3"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk3"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/eval_petunjuk"
            android:gravity="center_vertical|fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk4"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/petunjuk5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/dyna_blue"
        app:cardMaxElevation="12dp"
        app:layout_constraintTop_toBottomOf="@id/petunjuk4"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/petunjuk_done"
            android:gravity="center_vertical|fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/offwhite"
            android:text="@string/petunjuk5"
            android:textSize="12sp"
            />

    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>